full VocabularyTranslation